Fixing layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,8 @@
 
 .name-column {
   min-width: 300px;
-  max-width: 350px;
+  max-width: 400px;
+  flex-grow: 1;
 }
 
 .check-column {
